--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 click==8.1.8
 colorama==0.4.6
+dotenv==0.9.9
 fastapi==0.115.12
 greenlet==3.2.1
 h11==0.16.0
@@ -12,6 +13,7 @@ psycopg2==2.9.10
 pydantic==2.11.4
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 six==1.17.0
 sniffio==1.3.1
